--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,5 +1,5 @@
 head
-    title #{ISBN}
+    title #{username} | Profile
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
@@ -62,12 +62,12 @@ head
                  getBookPage(isbn);
               } else {
               
-              // admin
-              if(isbn.charAt(0) === "a") {
-                 isbn = isbn.slice(5);
-                 getBookPage(isbn);
-              }
-              }
+                // admin
+                if(isbn.charAt(0) === "a") {
+                    isbn = isbn.slice(5);
+                    getBookPage(isbn);
+                }
+             }
            })
            
            $(".trade_req").on("click", function() {
