moved footer to separate file

--- a/views/search-results.jade
+++ b/views/search-results.jade
@@ -48,5 +48,4 @@ body
                   div.search-result-user(id="result" + val.username)
                      button.btn.btn-default.search-result-username= val.username
                   
-   footer
-      p.footer &copy; 2015 Book Club
+   include footer
