--- a/views/settings.jade
+++ b/views/settings.jade
@@ -6,6 +6,7 @@ head
    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")   script(src="/js/navbar.js")
    
    // navbar css
+   
    link(rel="stylesheet", href="/css/navbar.css")
    link(rel="stylesheet", href="/css/settings.css")
    
@@ -107,5 +108,4 @@ body
                   br
                   button.btn.btn-default(type="submit") Change Information
 
-   footer
-      p.footer &copy; 2015 Book Club
+   include footer
