--- a/views/book.jade
+++ b/views/book.jade
@@ -53,6 +53,5 @@ body
                   button.btn.btn-default.book-add-user-collection Add to Collection
 
 
-   footer
-      p.footer &copy; 2015 Book Club
+   include footer
 
