--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,12 +1,13 @@
 body {
     text-align: center;
-    background-color: purple;
+    background-color: #aa4139;
     color: white;
 }
 
 h1 {
-    font-size: 30px;
-    text-decoration: underline;
+    color: #fff;
+    font-size: 45px;
+    font-weight: 600;
 }
 
 .login-signup-box {
@@ -16,39 +17,41 @@ h1 {
 }
 
 .login-signup-links {
-    border: 5px solid white;
-    border-radius: 5px;
-    width: 200px;
-    height: 150px;
+    width: 600px;
+    height: 300px;
     margin: 15px auto;
     padding: 50px 0;
 }
 
 .link {
-    background-color: inherit;
+    background-color: #ffdfaa;
     border: none;
-    color: white;
-    font-size: 20px;
+    border-radius: 5px;
+    color: #256f5c;
+    font-size: 40px;
+    margin: 0 5px 0 5px;
+    width: 168px;
 }
 
 .link:hover {
-    background-color: white;
-    color: purple;
+    background-color: #256f5c;
+    color: #ffdfaa;
 }
 
 #features {
     height: 400px;
+    
 }
 
 
 
 .feature {
-    border: 3px solid navy;
-    border-radius: 5px;
-    background-color: navy;
+    border: none;
+    background-color: #aa6f39;
     min-height: 200px;
     padding: 30px;
     font-size: 17px;
+    
 }
 
 .feature i {
@@ -62,6 +65,6 @@ footer {
     text-align: center;
     font-size: 10px;
     font-style: italic;
-    border-top: 1px solid grey;
-    color: grey;
+    border-top: 1px solid #000;
+    color: #000;
 }
