--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -3,13 +3,23 @@
 nav {
     font-size: 16px;
     padding: 10px 0 5px 0;
-    background-color: #f5f5f5;
-    border-bottom: 1px solid #e5e5e5;
+    
+    border-bottom: 1px solid #FFD3AA;
     height: 69px;
+}
+
+.navbar-default {
+    background-color: #aa4139;
 }
 
 .navbar-brand {
     font-size: 24px;
+    background-color: #801e16;
+    color: #fff !important;
+}
+
+.navbar-brand:hover {
+    background-color: #d4726a !important;
 }
 
 .navbar-link {
@@ -19,17 +29,31 @@ nav {
     background-color: inherit;
 }
 
+nav .btn-default {
+    border: none;
+    background-color: #801e16;
+    color: #fff !important;
+    vertical-align: top;
+    margin: 0 2px;
+}
+
+nav .btn-default:hover {
+    background-color: #d4726a !important;
+}
+
+.navbar-default .navbar-nav>.open>a{
+    background-color: #d4726a !important;
+}
+
 #my-profile-nav {
     color: #333333;
 }
 
 #nav-logout {
     width: 90px;
-    height: 52px;
-}
-
-#nav-logout:hover {
-    background-color: inherit;
+    height: 50px;
+    padding: 15px;
+    border: none;
 }
 
 /* search dropdown */
@@ -38,9 +62,21 @@ nav {
     width: 300px;
 }
 
+.dropdown-menu {
+        background-color: #aa4139;
+        color: #fff;
+        border-top: none;
+}
+
 .navbar-form-choices {
     width: 300px;
     padding: 0;
+    margin-top: 4px;
+    vertical-align: center;
+}
+
+.navbar-form-choices .nav-form-label, .navbar-form-choices .nav-form-input-radio {
+    padding: 5px 0 0 0;
 }
 
 #nav-user-search-input {
