--- a/client/css/search-results.css
+++ b/client/css/search-results.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #FFD3AA;    
+}
+
 #main-section {
     margin-top: 100px;
 }
@@ -6,12 +10,12 @@
     margin: 20px 10px 10px 10px;
     padding: 10px 30px;
     border: 1px inset black;
-    background-color: #BAC7CC;
+    background-color: #69969C;
 }
 
 .search-result {
     display: inline-block;
-    height: 200px;
+    height: 220px;
     width: 150px;
     margin: 0 5px;
     padding: 3px;
@@ -38,6 +42,8 @@
     text-align: center;
     background-color: #0E9C23;
     color: #FFFFFF;
+    position: absolute;
+    bottom: 5px;
 }
 
 .book-button:hover {
