--- a/views/book.jade
+++ b/views/book.jade
@@ -1,5 +1,5 @@
 head
-   title #{ISBN}
+   title #{title}
 
    script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
@@ -19,7 +19,7 @@ head
          })
          
          $(".book-add-user-collection").on("click", function() {
-            var isbn = $(this).parent().parent().parent().attr("id");
+            var isbn = $(this).parent().parent().attr("id");
             userAdd(isbn, username);
          })
          
@@ -35,18 +35,17 @@ body
    div.container-fluid#book
       div.container
          div.book-information(id=ISBN)
-            div.row
-               div.col-md-5
-                  img.book-img(src=img, alt=title + " Image")
-               div.col-md-7
+               img.book-img(src=img, alt=title + " Image")
+               div.book-information-div
                   h4.book-title #{title}
                   h6.book-author by #{author}
                   button.btn.btn-default.book-more-info-button(type="button") Click For More Info...
                   br
                   div.book-more-info
                      p Genres: 
-                     each val in genre
-                        span.book-genre= val 
+                     if(genre !== null)
+                        each val in genre
+                           span.book-genre= val 
                      p.book-published Published by #{published_by} on #{published_date}
                      p.book-pages #{pages} pages
                      p.book-ISBN ISBN: #{ISBN}
