--- a/views/index.jade
+++ b/views/index.jade
@@ -8,15 +8,29 @@ head
    
    
 body
-   div.container-fluid#pathing
+   header.container-fluid
       div.container
       h1.text-center Welcome to Book Club
-         div.col-lg-12.login-signup-box
-            div.login-signup-links
+      div.col-lg-12.login-signup-box
+         div.login-signup-links
+            if username == null
                a.btn.btn-default.link#login-button(href="/login.html") Log In
                a.btn.btn-default.link#signup-button(href="/signup.html") Sign Up
-   div.container-fluid#features
-      div.container
+            else
+               a.btn.btn-default.link(href="/user/" + username) My Profile
+               a.btn.btn-default.link#logout-button Log Out
+   div.container-fluid
+      div.container#carousel
+         div.carousel-body
+            h3 Own These Books?
+            div.carousel-main
+               each book in recent
+                  a.carousel-book.current(id=book._id, href="/book/" + book.ISBN)
+                     img(src=book.img alt=book.title)
+                     p= book.title
+   div.container-fluid
+      div.container#features
+         h3 Features
          div.row
             div.col-lg-6.feature
                i.fa.fa-book
@@ -33,3 +47,10 @@ body
                p.text-center Book collection updated regularly!
    footer
       p.footer &copy; 2015 Book Club
+   script(src="./js/navbar.js")
+   script.
+      $(document).ready(function() {
+          $("#logout-button").on("click", function() {
+             userLogout();
+         })
+      })
