--- a/client/css/profile.css
+++ b/client/css/profile.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #FFD3AA;
+    background-color: #E9E2D7;
 }
 
 #book-collection {
@@ -22,7 +22,7 @@ body {
     margin: 20px 10px 10px 10px;
     padding: 10px 30px;
     border: 1px inset black;
-    background-color: #69969C;
+    background-color: #6C9082;
 }
 
 .book-collection-results {
@@ -173,4 +173,6 @@ body {
     display: inline-block;
     margin-top: 2px;
 }
+
+
 
