--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -68,6 +68,9 @@ nav .btn-default:hover {
         background-color: #aa4139;
         color: #fff;
         border-top: none;
+    -webkit-box-shadow: 0 1px 10px 1px #000000;
+    -moz-box-shadow: 0 1px 10px 1px #000000;
+    box-shadow: 0 1px 10px 1px #000000;
 }
 
 .navbar-form-choices {
@@ -102,4 +105,54 @@ footer {
     bottom: 1%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+@media (max-width: 750px) {
+    .navbar-brand {
+        font-size: 16px;
+        margin-left: 5px;
+    }
+
+    .navbar-toggle {
+        border: 1px solid #fff;
+    }
+
+    #main-menu {
+        border-top: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
+
+    .navbar-toggle:hover {
+        border: 1px solid #000;
+        background-color: #D2B48C !important;
+    }
+
+    .nav.navbar-nav li a, .nav.navbar-nav li button {
+        border-radius: 0;
+        margin: 0;
+    }
+
+    .nav.navbar-nav li button {
+        width: 100% !important;
+    }
+
+    .nav.navbar-nav li ul.dropdown-menu {
+        background-color: #9B9AB0;
+    }
+
+    .nav.navbar-nav li ul.dropdown-menu li .navbar-form {
+        margin: 0 auto;
+        border: none;
+    }
+
+    .nav.navbar-nav li ul.dropdown-menu li .navbar-form .navbar-form-choices, .nav.navbar-nav li ul.dropdown-menu li .navbar-form input {
+        text-align: center;
+        margin: auto;
+    }
+
+    .nav.navbar-nav li ul.dropdown-menu li .navbar-form .navbar-form-choices button {
+        width: 280px !important;
+    }
 }
